test/regress/coverage-amount-too-many-periods.test
; Coverage for amount.cc
; "Too many periods" error is thrown when a second period is encountered
; after the first has been established as the decimal point.

2024/01/01 Test
    Expenses:Food    $100.50.25
    Assets:Cash

test bal -> 1
__ERROR__
While parsing file "$FILE", line 6:
While parsing posting:
  Expenses:Food    $100.50.25
                   ^^^^^^^^^^
Error: Too many periods in amount
end test
